# hi221_imu_9dof

./: README.md  package.xml  setup.cfg  setup.py
config/: config_hi221.json  config_hi221.yaml
hi221_imu_9dof/: imu_node.py
