<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hi221_imu_9dof</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>python-serial</depend> -->
  <!-- <depend>vpython</depend> -->
  <!-- <depend>wxPython</depend> -->
  <!-- <depend>transforms3d</depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
